Fix spacing issue on recipes section

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,6 @@
 body {
   overflow-x: hidden;
   box-sizing: border-box;
-  position: relative;
   transition: .5s;
   font-weight: 300;
   letter-spacing: 0.5px;
